# research-data-science-training

./: .gitignore  .pre-commit-config.yaml  CLAUDE-v1.md  CLAUDE.md  Justfile  README.md  page-template.py  page-template.qmd  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pre-commit.yml
commandline-workshops/shell-introduction/: .gitignore  01-intro.qmd  02-filedir.qmd  03-create.qmd  04-pipefilter.qmd  05-loop.qmd  06-script.qmd  07-find.qmd  LICENSE.md  README.md
git-workshops/git-introduction/: .gitignore  01-getting-started.qmd  02-git-intro.qmd  03-create-repo.qmd  04-git-setup.qmd  05-track-changes.qmd  06-push-changes.qmd  07-branches.qmd  08-pull-request.qmd  09-conflicts.qmd  10-practice.qmd  README.md
ide-workshops/: README.md
ide-workshops/markdown-introduction/: 01-basic-markdown.qmd  02-github-flavored-markdown.qmd  03-quarto-markdown.qmd  index.qmd
ide-workshops/positron-introduction/: 01-getting-started.qmd  02-interface-overview.qmd  03-interpreter-setup.qmd  04-data-exploration.qmd  05-python-workflow.qmd  06-r-workflow.qmd  LICENSE.md  README.md
ide-workshops/vscode-introduction/: 01-getting-started.qmd  02-basics.qmd  03-code-editing.qmd  04-customization.qmd  05-extensions.qmd  06-version-control.qmd  index.qmd
python-workshops/: README.md
python-workshops/llm-introduction/: 0_setup.qmd  1_basic-usage.qmd  2_advanced-techniques.qmd  3_practical-applications.qmd  LICENSE.md  README.md
python-workshops/python-data-analysis/: 01-run-quit.qmd  02-variables.qmd  05-coffee.qmd  06-libraries.qmd  07-reading-tabular.qmd  08-data-frames.qmd  09-plotting.qmd  12-for-loops.qmd  13-conditionals.qmd  14-looping-data-sets.qmd  15-coffee.qmd  16-writing-functions.qmd  17-scope.qmd  (+4 more)
stata-workshops/: README.md
(+79 files in other folders)
